[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/mainmenu/return_text.png" type="Texture" id=1]
[ext_resource path="res://real assets/playerisps/alidada.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Menu/ISP_select_script.gd" type="Script" id=3]
[ext_resource path="res://real assets/background.png" type="Texture" id=4]
[ext_resource path="res://Assets/Theme/Menuisp.tres" type="Theme" id=5]
[ext_resource path="res://real assets/playerisps/whoawei.png" type="Texture" id=6]
[ext_resource path="res://real assets/playerisps/xiaomy.png" type="Texture" id=7]
[ext_resource path="res://real assets/playerisps/nockia.png" type="Texture" id=8]

[node name="MarginContainer" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
script = ExtResource( 3 )
menu_scene_path = "res://Scenes/Menu/MainMenu.tscn"
map_path = "res://Scenes/Scene.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 60.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 286.0
margin_right = 1920.0
margin_bottom = 729.0
theme = ExtResource( 5 )
custom_constants/separation = 80
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 465.0
margin_bottom = 443.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 89.0
text = "Who-awei"
align = 1

[node name="Who-awei" type="TextureButton" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 350.0
margin_bottom = 443.0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 545.0
margin_right = 895.0
margin_bottom = 443.0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 350.0
margin_bottom = 89.0
text = "Xiaomy"
align = 1

[node name="Xiaomy" type="TextureButton" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 93.0
margin_right = 350.0
margin_bottom = 443.0
size_flags_vertical = 0
texture_normal = ExtResource( 7 )

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 975.0
margin_right = 1325.0
margin_bottom = 443.0
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 350.0
margin_bottom = 89.0
text = "Alidada"
align = 1

[node name="Alidada" type="TextureButton" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 93.0
margin_right = 350.0
margin_bottom = 443.0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 1405.0
margin_right = 1805.0
margin_bottom = 443.0

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_right = 400.0
margin_bottom = 89.0
text = "Knockia"
align = 1

[node name="Knockia" type="TextureButton" parent="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
margin_top = 93.0
margin_right = 400.0
margin_bottom = 393.0
size_flags_vertical = 0
texture_normal = ExtResource( 8 )
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Who-awei" to="." method="_on_Whoawei_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Xiaomy" to="." method="_on_Xiaomy_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Alidada" to="." method="_on_Alidada_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer4/Knockia" to="." method="_on_Knockia_pressed"]
